feat: add cspell

--- a/apps/site/src/content/docs/cypherpunk.mdx
+++ b/apps/site/src/content/docs/cypherpunk.mdx
@@ -22,9 +22,7 @@ by our CTO <a target="_blank" rel="noopener noreferrer" href='https://x.com/tobe
     title="Samui Wallet - Demo for Cypherpunk Hackathon"
     src="https://www.loom.com/embed/cf56ed18e2684767860a3955786f0dbf"
     frameBorder="0"
-    webkitallowfullscreen
-    mozallowfullscreen
-    allowFullScreen
+    allow="fullscreen"
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
   ></iframe>
 </div>
@@ -39,9 +37,7 @@ by our CEO <a target="_blank" rel="noopener noreferrer" href='https://x.com/beem
     title="Samui Wallet - Pitch for Cypherpunk Hackathon"
     src="https://www.loom.com/embed/89282739903b4cec854b5459b38eb8e0"
     frameBorder="0"
-    webkitallowfullscreen
-    mozallowfullscreen
-    allowFullScreen
+    allow="fullscreen"
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
   ></iframe>
 </div>
