--- a/apps/site/src/content/docs/terms-of-service.mdx
+++ b/apps/site/src/content/docs/terms-of-service.mdx
@@ -22,7 +22,7 @@ Samui Wallet is a noncustodial Solana wallet. The App allows you to create and m
 
 - **Security:** You are solely responsible for securing and backing up your private keys and any recovery phrases. If you lose your private keys or recovery phrase, you will lose access to your digital assets. We cannot recover your keys or your funds.
 - **Transactions:** You are solely responsible for all transactions you initiate through the App. All blockchain transactions are irreversible. We do not have the ability to reverse or refund any transaction.
-- **Compliance:** You agree to use the App in compliance with all applicable laws and regulations. You will not use the App for any illegal activity, including but not inlimited to money laundering or financing terrorism.
+- **Compliance:** You agree to use the App in compliance with all applicable laws and regulations. You will not use the App for any illegal activity, including but not limited to money laundering or financing terrorism.
 
 ### 3. Assumption of Risk
 
