fix(docs): correct GitHub repo URL

--- a/apps/site/src/content/docs/index.mdx
+++ b/apps/site/src/content/docs/index.mdx
@@ -25,7 +25,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
       Follow us on X to stay up to date with the project!
     </Card>
   </a>
-  <a href="https://x.com/SamuiBuild" target="_blank" style={{ textDecoration: 'none' }}>
+  <a href="https://github.com/samui-build/samui-wallet" target="_blank" style={{ textDecoration: 'none' }}>
     <Card title="Star our repo on GitHub" icon="github">
       Star our repo on GitHub or fork it and start contributing!
     </Card>
