feat(site): add discord link and /go/* redirects

--- a/apps/site/src/content/docs/index.mdx
+++ b/apps/site/src/content/docs/index.mdx
@@ -20,14 +20,19 @@ hero:
 import { Card, CardGrid } from '@astrojs/starlight/components'
 
 <CardGrid>
-  <a href="https://x.com/SamuiBuild" target="_blank" style={{ textDecoration: 'none' }}>
-    <Card title="Follow us on X" icon="x.com">
-      Follow us on X to stay up to date with the project!
+  <a href="/go/github" target="_blank" style={{ textDecoration: 'none' }}>
+    <Card title="Star our repo on GitHub" icon="github">
+      Star and fork our repo on GitHub and start contributing!
     </Card>
   </a>
-  <a href="https://github.com/samui-build/samui-wallet" target="_blank" style={{ textDecoration: 'none' }}>
-    <Card title="Star our repo on GitHub" icon="github">
-      Star our repo on GitHub or fork it and start contributing!
+  <a href="/go/discord" target="_blank" style={{ textDecoration: 'none' }}>
+    <Card title="Join our Discord" icon="discord">
+      Join our Discord to talk about Samui Wallet development.
+    </Card>
+  </a>
+  <a href="/go/x" target="_blank" style={{ textDecoration: 'none' }}>
+    <Card title="Follow us on X" icon="x.com">
+      Follow us on X to stay up to date with the project!
     </Card>
   </a>
 </CardGrid>
