feat(site): update cypherpunk page and add banner

--- a/apps/site/src/content/docs/cypherpunk.mdx
+++ b/apps/site/src/content/docs/cypherpunk.mdx
@@ -1,9 +1,16 @@
 ---
-title: Cypherpunk Hackathon
 description: Samui Wallet participates in the Solana Cypherpunk Hackathon by Colosseum.
+sidebar:
+  hidden: true
+tableOfContents: false
+template: splash
+title: Cypherpunk Hackathon
 ---
 
 Samui Wallet is an Open Source wallet and toolbox for Solana builders, built for the Cypherpunk Hackathon by Colosseum.
+
+Check our <a target="_blank" rel="noopener noreferrer" href='https://arena.colosseum.org/projects/explore/samui-wallet'>project page</a> in the
+Colosseum Arena to see our complete submission.
 
 ### Watch the demo
 
