--- a/apps/site/src/content/docs/index.mdx
+++ b/apps/site/src/content/docs/index.mdx
@@ -1,7 +1,11 @@
 ---
-title: Samui
+title: Home
 description: Open Source Solana wallet and toolbox for builders.
 template: splash # Remove or comment out this line to display the site sidebar on this page.
+banner:
+  content: |
+    We participated in the Cypherpunk Hackathon.
+    <a href="/cypherpunk">Check out our submission!</a>
 hero:
   title: |
     <span
