fix(site): replace email placeholder in privacy policy

--- a/apps/site/src/content/docs/privacy-policy.mdx
+++ b/apps/site/src/content/docs/privacy-policy.mdx
@@ -44,4 +44,4 @@ We may update this privacy policy. We will notify you of any changes by posting 
 
 ### 8. Contact Us
 
-If you have any questions about this privacy policy, you can contact us at: [Your Contact Email]
+If you have any questions about this privacy policy, you can contact us at: info [at] samui [dot] build.
