--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -5,7 +5,7 @@
     "react-i18next": "^16.2.3"
   },
   "devDependencies": {
-    "@types/node": "catalog:",
+    "@types/bun": "catalog:",
     "@workspace/config-typescript": "workspace:*",
     "typescript": "catalog:"
   },
