chore(i18n): translate onboarding-feature-index

--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -3,5 +3,5 @@
     "outDir": "dist"
   },
   "extends": "@workspace/config-typescript/base.json",
-  "files": ["locales/en/translation.json", "locales/es/translation.json"]
+  "files": ["locales/en/onboarding.json", "locales/es/onboarding.json"]
 }
