chore(i18n): translate onboarding ui

--- a/packages/i18n/locales/en/onboarding.json
+++ b/packages/i18n/locales/en/onboarding.json
@@ -3,11 +3,15 @@
   "generateCardDescription": "This seed phrase is the ONLY way to recover your wallet. Don't share it with anyone!",
   "generateCardTitle": "Generate Recovery Phrase",
   "generateToastCopied": "Mnemonic copied to clipboard",
+  "generateToastCopy": "Copy",
   "importButtonSubmit": "Import wallet",
   "importCardDescription": "Enter the seed phrase you stored when you created your wallet.",
   "importCardTitle": "Import Recovery Phrase",
+  "importToastPaste": "Paste",
   "indexLinkGenerate": "Create a new wallet",
   "indexLinkImport": "I already have a wallet",
   "indexPageDescription": "We hope you enjoy your stay!",
-  "indexPageTitle": "Welcome to 🏝️ Samui Wallet"
+  "indexPageTitle": "Welcome to 🏝️ Samui Wallet",
+  "uiMnemonicUnexpectedLength": "Unexpected mnemonic length",
+  "uiMnemonicWords": "{{words}} words"
 }
