--- a/packages/i18n/locales/es/onboarding.json
+++ b/packages/i18n/locales/es/onboarding.json
@@ -3,11 +3,15 @@
   "generateCardDescription": "Esta frase semilla es la ÚNICA forma de recuperar tu billetera. ¡No la compartas con nadie!",
   "generateCardTitle": "Generar frase de recuperación",
   "generateToastCopied": "Mnemónica copiada al portapapeles",
+  "generateToastCopy": "Copiar",
   "importButtonSubmit": "Importar billetera",
   "importCardDescription": "Introduce la frase semilla que guardaste cuando creaste tu billetera.",
   "importCardTitle": "Importar frase de recuperación",
+  "importToastPaste": "Pegar",
   "indexLinkGenerate": "Crea una nueva billetera",
   "indexLinkImport": "Ya tengo una billetera",
   "indexPageDescription": "Esperamos que disfrutes tu estancia",
-  "indexPageTitle": "Bienvenido a 🏝 Samui Wallet"
+  "indexPageTitle": "Bienvenido a 🏝 Samui Wallet",
+  "uiMnemonicUnexpectedLength": "Longitud mnemónica inesperada",
+  "uiMnemonicWords": "{{words}} palabras"
 }
