--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -1,4 +1,21 @@
 {
+  "actionCreate": "Create",
+  "actionDelete": "Delete",
+  "actionEdit": "Edit",
+  "actionSave": "Save",
+  "networkInputEndpointDescription": "Provide the network endpoint",
+  "networkInputEndpointLabel": "Endpoint",
+  "networkInputEndpointPlaceholder": "Network Endpoint",
+  "networkInputEndpointSubscriptionsDescription": "Provide the network endpoint for subscriptions",
+  "networkInputEndpointSubscriptionsLabel": "Subscriptions Endpoint",
+  "networkInputEndpointSubscriptionsPlaceholder": "Network Endpoint for Subscriptions",
+  "networkInputNameDescription": "Provide the name of the network",
+  "networkInputNameLabel": "Name",
+  "networkInputNamePlaceholder": "Network name",
+  "networkInputTypeDescription": "You can&#39;t change the type of network after you created it.",
+  "networkInputTypeLabel": "Network",
+  "networkPageAddTitle": "Add Network",
+  "networkPageEditTitle": "Edit network",
   "pageGeneralApiEndpoint": "API Endpoint",
   "pageGeneralDangerZone": "Danger zone",
   "pageGeneralDescription": "General settings for the app",
