--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -1,4 +1,21 @@
 {
+  "actionCreate": "Crear",
+  "actionDelete": "Eliminar",
+  "actionEdit": "Editar",
+  "actionSave": "Guardar",
+  "networkInputEndpointDescription": "Proporcionar el endpoint de la red",
+  "networkInputEndpointLabel": "Endpoint",
+  "networkInputEndpointPlaceholder": "Endpoint de la red",
+  "networkInputEndpointSubscriptionsDescription": "Proporcionar el endpoint de la red para las suscripciones.",
+  "networkInputEndpointSubscriptionsLabel": "Endpoints de suscripción",
+  "networkInputEndpointSubscriptionsPlaceholder": "Endpoint de la red para suscripciones",
+  "networkInputNameDescription": "Indique el nombre de la red. ",
+  "networkInputNameLabel": "Nombre",
+  "networkInputNamePlaceholder": "Nombre de la red",
+  "networkInputTypeDescription": "No se puede cambiar el tipo de red una vez creada.",
+  "networkInputTypeLabel": "Red",
+  "networkPageAddTitle": "Agregar red",
+  "networkPageEditTitle": "Editar red",
   "pageGeneralApiEndpoint": "Endpoint de la API",
   "pageGeneralDangerZone": "Zona de peligro",
   "pageGeneralDescription": "Ajustes generales de la app",
