feat(ui): implement ui-confirm component

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -1,7 +1,8 @@
 {
   "accountCopySecretKey": "Copy secret key to clipboard",
   "accountCopySecretKeyBlocked": "Clipboard copy blocked. Secret key shown for manual copy.",
-  "accountCopySecretKeyConfirm": "Exporting the secret key reveals sensitive information. Do you want to copy it to your clipboard?",
+  "accountCopySecretKeyConfirmDescription": "Do you want to copy it to your clipboard?",
+  "accountCopySecretKeyConfirmTitle": "Exporting the secret key reveals sensitive information.",
   "accountCopySecretKeyCopied": "Secret key copied to clipboard",
   "accountCopySecretKeyDialog": "Copy your secret key from this dialog:",
   "accountNoSecretKey": "Secret key is not available for this account",
