feat(settings): translate wallets page

--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -1,8 +1,29 @@
 {
+  "accountCopySecretKey": "Copiar clave secreta al portapapeles",
+  "accountCopySecretKeyBlocked": "Copia al portapapeles bloqueada. Se muestra la clave secreta para copiar manualmente.",
+  "accountCopySecretKeyConfirm": "Al exportar la clave secreta se revela información confidencial. ¿Desea copiarla en el portapapeles?",
+  "accountCopySecretKeyCopied": "Clave secreta copiada al portapapeles",
+  "accountCopySecretKeyDialog": "Copie su clave secreta desde este cuadro de diálogo:",
+  "accountNoSecretKey": "La clave secreta no está disponible para esta cuenta.",
+  "accountTableHeaderActions": "Acciones",
+  "accountTableHeaderName": "Nombre",
+  "accountTableHeaderPublicKey": "Llave publica",
+  "accountTableHeaderType": "Tipo",
+  "accountTypeDerived": "Derivado",
+  "accountTypeImported": "Importado",
+  "accountTypeWatched": "Visto",
+  "actionAddAccount": "Agregar cuenta",
   "actionCreate": "Crear",
   "actionDelete": "Eliminar",
+  "actionDerive": "Derivar",
   "actionEdit": "Editar",
+  "actionEditWallet": "Editar billetera",
+  "actionEditWalletMessage": "Añadir cuenta a esta billetera",
+  "actionExportMnemonic": "Exportar mnemónica",
+  "actionGenerate": "Generar",
+  "actionImport": "Importar",
   "actionSave": "Guardar",
+  "actionWatch": "Observar",
   "networkInputEndpointDescription": "Proporcionar el endpoint de la red",
   "networkInputEndpointLabel": "Endpoint",
   "networkInputEndpointPlaceholder": "Endpoint de la red",
@@ -27,5 +48,33 @@
   "pageNetworkDescription": "Gestionar redes y endpoints",
   "pageNetworkName": "Redes",
   "pageWalletDescription": "Gestionar billeteras y cuentas",
-  "pageWalletName": "Billeteras"
+  "pageWalletName": "Billeteras",
+  "walletAddAccountDeriveDescription": "Derivar una cuenta a partir de la frase mnemónica de la billetera.",
+  "walletAddAccountDeriveTitle": "Derivar una cuenta",
+  "walletAddAccountImportDescription": "Importar una cuenta desde una clave secreta base85 o una matriz de bytes",
+  "walletAddAccountImportTitle": "Importar una cuenta",
+  "walletAddAccountWatchDescription": "Observar cuenta mediante clave pública sin importar un secreto.",
+  "walletAddAccountWatchTitle": "Observar cuenta",
+  "walletCreateGenerateDescription": "Generar una nueva frase semilla y derivar una cuenta",
+  "walletCreateGenerateTitle": "Generar una nueva billetera",
+  "walletCreateHardwareUnruggableDescription": "Unruggable es la primera cuenta de hardware nativa de Solana.",
+  "walletCreateHardwareUnruggableTitle": "Conecta Unruggable.",
+  "walletCreateHeaderHardware": "Cuentas de hardware",
+  "walletCreateHeaderSeed": "Frase semilla",
+  "walletCreateImportDescription": "Importar una frase semilla existente y descubrir cuentas",
+  "walletCreateImportTitle": "Importar una billetera existente",
+  "walletInputDerivationPathDescription": "Proporcione la ruta de derivación de la billetera.",
+  "walletInputDerivationPathLabel": "Ruta de derivación",
+  "walletInputMnemonicDescription": "Proporcione el mnemónica de la billetera.",
+  "walletInputMnemonicLabel": "Mnemónica",
+  "walletInputMnemonicPlaceholder": "Mnemónica de la billetera",
+  "walletInputNameDescription": "Indique el nombre de la billetera.",
+  "walletInputNameLabel": "Nombre",
+  "walletInputNamePlaceholder": "Nombre de la billetera",
+  "walletInputRedirectLabel": "Redirecciona después de la importación",
+  "walletPageAddAccountDescription": "Añadir una nueva cuenta a esta billetera",
+  "walletPageAddTitle": "Crear billetera",
+  "walletPageEditTitle": "Editar billetera",
+  "walletPageGenerateTitle": "Generar billetera",
+  "walletPageImportTitle": "Importar billetera"
 }
