feat(shell): add top-level navigation options to command menu

--- a/packages/i18n/locales/en/shell.json
+++ b/packages/i18n/locales/en/shell.json
@@ -5,6 +5,8 @@
   "accountPublicKeyCopySuccess": "Copied public key",
   "commandEmpty": "No results found.",
   "commandInputPlaceholder": "Type a command or search...",
+  "commandNavigate": "Navigate",
+  "commandNavigateTo": "Navigate to",
   "commandSuggestions": "Suggestions",
   "labelExplorer": "Explorer",
   "labelPortfolio": "Portfolio",
