--- a/packages/i18n/locales/en/shell.json
+++ b/packages/i18n/locales/en/shell.json
@@ -7,6 +7,8 @@
   "actionsSidebarShow": "Show sidebar",
   "commandEmpty": "No results found.",
   "commandInputPlaceholder": "Type a command or search...",
+  "commandNavigate": "Navigate",
+  "commandNavigateTo": "Navigate to",
   "commandSuggestions": "Suggestions",
   "labelExplorer": "Explorer",
   "labelPortfolio": "Portfolio",
