--- a/packages/i18n/locales/es/shell.json
+++ b/packages/i18n/locales/es/shell.json
@@ -7,6 +7,8 @@
   "actionsSidebarShow": "Abrir barra lateral",
   "commandEmpty": "Ningún resultado encontrado.",
   "commandInputPlaceholder": "Escriba un comando o busque...",
+  "commandNavigate": "Navegar",
+  "commandNavigateTo": "Navega a",
   "commandSuggestions": "Sugerencias",
   "labelExplorer": "Explorador",
   "labelPortfolio": "Portafolio",
