feat(extension): add icon to open and close sidebar

--- a/packages/i18n/locales/en/shell.json
+++ b/packages/i18n/locales/en/shell.json
@@ -3,6 +3,8 @@
   "accountPublicKeyCopy": "Copy public key",
   "accountPublicKeyCopyFailed": "Failed to copy public key",
   "accountPublicKeyCopySuccess": "Copied public key",
+  "actionsSidebarHide": "Hide sidebar",
+  "actionsSidebarShow": "Show sidebar",
   "commandEmpty": "No results found.",
   "commandInputPlaceholder": "Type a command or search...",
   "commandSuggestions": "Suggestions",
