--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "i18next": "^25.6.0",
     "i18next-cli": "^1.19.1",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-i18next": "^16.2.3"
   },
   "devDependencies": {
