feat(portfolio): translate portfolio pages

--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -8,7 +8,7 @@
   "accountNoSecretKey": "La clave secreta no está disponible para esta cuenta.",
   "accountTableHeaderActions": "Acciones",
   "accountTableHeaderName": "Nombre",
-  "accountTableHeaderPublicKey": "Llave publica",
+  "accountTableHeaderPublicKey": "Clave pública",
   "accountTableHeaderType": "Tipo",
   "accountTypeDerived": "Derivado",
   "accountTypeImported": "Importado",
@@ -31,7 +31,7 @@
   "networkInputEndpointSubscriptionsDescription": "Proporcionar el endpoint de la red para las suscripciones.",
   "networkInputEndpointSubscriptionsLabel": "Endpoints de suscripción",
   "networkInputEndpointSubscriptionsPlaceholder": "Endpoint de la red para suscripciones",
-  "networkInputNameDescription": "Indique el nombre de la red. ",
+  "networkInputNameDescription": "Indique el nombre de la red.",
   "networkInputNameLabel": "Nombre",
   "networkInputNamePlaceholder": "Nombre de la red",
   "networkInputTypeDescription": "No se puede cambiar el tipo de red una vez creada.",
