feat(shell): add development mode command

--- a/packages/i18n/locales/es/shell.json
+++ b/packages/i18n/locales/es/shell.json
@@ -5,13 +5,17 @@
   "accountPublicKeyCopySuccess": "Clave pública copiada",
   "actionsSidebarHide": "Cerrar barra lateral",
   "actionsSidebarShow": "Abrir barra lateral",
+  "commandDevelopment": "Desarrollo",
+  "commandDisableDeveloperMode": "Desactivar modo desarrollador",
   "commandEmpty": "Ningún resultado encontrado.",
+  "commandEnableDeveloperMode": "Activar modo desarrollador",
   "commandInputPlaceholder": "Escriba un comando o busque...",
   "commandLanguage": "Idioma",
   "commandLanguageChangeTo": "Cambiar a",
   "commandNavigate": "Navegar",
   "commandNavigateTo": "Navega a",
   "commandSuggestions": "Sugerencias",
+  "labelDevelopment": "Desarrollo",
   "labelExplorer": "Explorador",
   "labelPortfolio": "Portafolio",
   "labelSettings": "Ajustes",
