--- a/packages/i18n/locales/en/shell.json
+++ b/packages/i18n/locales/en/shell.json
@@ -5,13 +5,17 @@
   "accountPublicKeyCopySuccess": "Copied public key",
   "actionsSidebarHide": "Hide sidebar",
   "actionsSidebarShow": "Show sidebar",
+  "commandDevelopment": "Development",
+  "commandDisableDeveloperMode": "Disable developer mode",
   "commandEmpty": "No results found.",
+  "commandEnableDeveloperMode": "Enable developer mode",
   "commandInputPlaceholder": "Type a command or search...",
   "commandLanguage": "Language",
   "commandLanguageChangeTo": "Change to",
   "commandNavigate": "Navigate",
   "commandNavigateTo": "Navigate to",
   "commandSuggestions": "Suggestions",
+  "labelDevelopment": "Development",
   "labelExplorer": "Explorer",
   "labelPortfolio": "Portfolio",
   "labelSettings": "Settings",
