fix(settings): implement ui-prompt

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -55,9 +55,13 @@
   "themeLight": "Light",
   "walletAddAccountDeriveDescription": "Derive an account from the Wallet&#39;s mnemonic",
   "walletAddAccountDeriveTitle": "Derive an account",
-  "walletAddAccountImportDescription": "Import an account from a base85 secret key or byte array",
+  "walletAddAccountImportDescription": "Import an account from a base58 secret key or byte array",
+  "walletAddAccountImportLabel": "Enter secret key (base58 or byte array)",
+  "walletAddAccountImportPlaceholder": "Enter your base58 secret key or byte array…",
   "walletAddAccountImportTitle": "Import an account",
   "walletAddAccountWatchDescription": "Watch an account by public key without importing a secret",
+  "walletAddAccountWatchLabel": "Enter public key",
+  "walletAddAccountWatchPlaceholder": "Enter the account's public key…",
   "walletAddAccountWatchTitle": "Watch an account",
   "walletCreateGenerateDescription": "Generate a new seed phrase and derive an account",
   "walletCreateGenerateTitle": "Generate a new wallet",
