--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -55,9 +55,13 @@
   "themeLight": "Claro",
   "walletAddAccountDeriveDescription": "Derivar una cuenta a partir de la frase mnemónica de la billetera.",
   "walletAddAccountDeriveTitle": "Derivar una cuenta",
-  "walletAddAccountImportDescription": "Importar una cuenta desde una clave secreta base85 o una matriz de bytes",
+  "walletAddAccountImportDescription": "Importar una cuenta desde una clave secreta base58 o una matriz de bytes",
+  "walletAddAccountImportLabel": "Ingrese la clave secreta (base58 o matriz de bytes)",
+  "walletAddAccountImportPlaceholder": "Ingrese su clave secreta base58 o matriz de bytes…",
   "walletAddAccountImportTitle": "Importar una cuenta",
   "walletAddAccountWatchDescription": "Observar cuenta mediante clave pública sin importar un secreto.",
+  "walletAddAccountWatchLabel": "Ingrese la clave pública",
+  "walletAddAccountWatchPlaceholder": "Ingrese la clave pública de la cuenta…",
   "walletAddAccountWatchTitle": "Observar cuenta",
   "walletCreateGenerateDescription": "Generar una nueva frase semilla y derivar una cuenta",
   "walletCreateGenerateTitle": "Generar una nueva billetera",
