feat: add theme switcher

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -46,10 +46,13 @@
   "pageGeneralLanguage": "Language",
   "pageGeneralName": "General",
   "pageGeneralReset": "Reset application",
+  "pageGeneralTheme": "Theme",
   "pageNetworkDescription": "Manage networks and endpoints",
   "pageNetworkName": "Networks",
   "pageWalletDescription": "Manage wallets and accounts",
   "pageWalletName": "Wallets",
+  "themeDark": "Dark",
+  "themeLight": "Light",
   "walletAddAccountDeriveDescription": "Derive an account from the Wallet&#39;s mnemonic",
   "walletAddAccountDeriveTitle": "Derive an account",
   "walletAddAccountImportDescription": "Import an account from a base85 secret key or byte array",
