--- a/packages/i18n/locales/en/shell.json
+++ b/packages/i18n/locales/en/shell.json
@@ -11,10 +11,12 @@
   "commandEnableDeveloperMode": "Enable developer mode",
   "commandInputPlaceholder": "Type a command or search...",
   "commandLanguage": "Language",
-  "commandLanguageChangeTo": "Change to",
+  "commandLanguageChangeTo": "Change language to",
   "commandNavigate": "Navigate",
   "commandNavigateTo": "Navigate to",
   "commandSuggestions": "Suggestions",
+  "commandTheme": "Theme",
+  "commandThemeChangeTo": "Change theme to",
   "labelDevelopment": "Development",
   "labelExplorer": "Explorer",
   "labelPortfolio": "Portfolio",
