--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -46,10 +46,13 @@
   "pageGeneralLanguage": "Idioma",
   "pageGeneralName": "General",
   "pageGeneralReset": "Restablecer aplicación",
+  "pageGeneralTheme": "Apariencia",
   "pageNetworkDescription": "Gestionar redes y endpoints",
   "pageNetworkName": "Redes",
   "pageWalletDescription": "Gestionar billeteras y cuentas",
   "pageWalletName": "Billeteras",
+  "themeDark": "Oscuro",
+  "themeLight": "Claro",
   "walletAddAccountDeriveDescription": "Derivar una cuenta a partir de la frase mnemónica de la billetera.",
   "walletAddAccountDeriveTitle": "Derivar una cuenta",
   "walletAddAccountImportDescription": "Importar una cuenta desde una clave secreta base85 o una matriz de bytes",
