--- a/packages/i18n/locales/es/shell.json
+++ b/packages/i18n/locales/es/shell.json
@@ -11,10 +11,12 @@
   "commandEnableDeveloperMode": "Activar modo desarrollador",
   "commandInputPlaceholder": "Escriba un comando o busque...",
   "commandLanguage": "Idioma",
-  "commandLanguageChangeTo": "Cambiar a",
+  "commandLanguageChangeTo": "Cambia idioma a",
   "commandNavigate": "Navegar",
   "commandNavigateTo": "Navega a",
   "commandSuggestions": "Sugerencias",
+  "commandTheme": "Apariencia",
+  "commandThemeChangeTo": "Cambia apariencia a",
   "labelDevelopment": "Desarrollo",
   "labelExplorer": "Explorador",
   "labelPortfolio": "Portafolio",
