feat: improve export feature for mnemonic and secret key

--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -1,11 +1,4 @@
 {
-  "accountCopySecretKey": "Copiar clave secreta al portapapeles",
-  "accountCopySecretKeyBlocked": "Copia al portapapeles bloqueada. Se muestra la clave secreta para copiar manualmente.",
-  "accountCopySecretKeyConfirmDescription": "¿Desea copiarla en el portapapeles?",
-  "accountCopySecretKeyConfirmTitle": "Al exportar la clave secreta se revela información confidencial.",
-  "accountCopySecretKeyCopied": "Clave secreta copiada al portapapeles",
-  "accountCopySecretKeyDialog": "Copie su clave secreta desde este cuadro de diálogo:",
-  "accountNoSecretKey": "La clave secreta no está disponible para esta cuenta.",
   "accountTableHeaderActions": "Acciones",
   "accountTableHeaderName": "Nombre",
   "accountTableHeaderPublicKey": "Clave pública",
@@ -20,11 +13,26 @@
   "actionEdit": "Editar",
   "actionEditWallet": "Editar billetera",
   "actionEditWalletMessage": "Añadir cuenta a esta billetera",
-  "actionExportMnemonic": "Exportar mnemónica",
   "actionGenerate": "Generar",
   "actionImport": "Importar",
   "actionSave": "Guardar",
   "actionWatch": "Observar",
+  "exportMnemonicCopy": "Copiar mnemónica al portapapeles",
+  "exportMnemonicCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
+  "exportMnemonicCopyConfirmTitle": "Al exportar la mnemónica se revela información confidencial.",
+  "exportMnemonicCopyCopied": "Clave secreta copiada al portapapeles",
+  "exportMnemonicReveal": "Revelar mnemónica",
+  "exportMnemonicShow": "Mostrar mnemónica",
+  "exportSecretKeyCopy": "Copiar clave secreta al portapapeles",
+  "exportSecretKeyCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
+  "exportSecretKeyCopyConfirmTitle": "Al exportar la clave secreta se revela información confidencial.",
+  "exportSecretKeyCopyCopied": "Clave secreta copiada al portapapeles",
+  "exportSecretKeyReveal": "Revelar clave secreta",
+  "exportSecretKeyShow": "Mostrar clave secreta",
+  "exportWarning1": "El equipo de Samui nunca solicitará tus secretos.",
+  "exportWarning2": "Nunca compartas tu secreto ni lo introduzcas en una aplicación o sitio web.",
+  "exportWarning3": "Cualquiera que tenga tu secreto tendrá control total de tu cuenta.",
+  "exportWarningAccept": "Acepto que la exportación de este valor es bajo mi propio riesgo.",
   "networkInputEndpointDescription": "Proporcionar el endpoint de la red",
   "networkInputEndpointLabel": "Endpoint",
   "networkInputEndpointPlaceholder": "Endpoint de la red",
