feat: improve export feature for mnemonic and secret key

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -1,11 +1,4 @@
 {
-  "accountCopySecretKey": "Copy secret key to clipboard",
-  "accountCopySecretKeyBlocked": "Clipboard copy blocked. Secret key shown for manual copy.",
-  "accountCopySecretKeyConfirmDescription": "Do you want to copy it to your clipboard?",
-  "accountCopySecretKeyConfirmTitle": "Exporting the secret key reveals sensitive information.",
-  "accountCopySecretKeyCopied": "Secret key copied to clipboard",
-  "accountCopySecretKeyDialog": "Copy your secret key from this dialog:",
-  "accountNoSecretKey": "Secret key is not available for this account",
   "accountTableHeaderActions": "Actions",
   "accountTableHeaderName": "Name",
   "accountTableHeaderPublicKey": "Public key",
@@ -20,11 +13,26 @@
   "actionEdit": "Edit",
   "actionEditWallet": "Edit wallet",
   "actionEditWalletMessage": "Add account to this wallet",
-  "actionExportMnemonic": "Export mnemonic",
   "actionGenerate": "Generate",
   "actionImport": "Import",
   "actionSave": "Save",
   "actionWatch": "Watch",
+  "exportMnemonicCopy": "Copy mnemonic",
+  "exportMnemonicCopyConfirmDescription": "Do you want to copy it to your clipboard?",
+  "exportMnemonicCopyConfirmTitle": "Exporting the mnemonic reveals sensitive information.",
+  "exportMnemonicCopyCopied": "Mnemonic copied to clipboard",
+  "exportMnemonicReveal": "Reveal mnemonic",
+  "exportMnemonicShow": "Show mnemonic",
+  "exportSecretKeyCopy": "Copy secret key",
+  "exportSecretKeyCopyConfirmDescription": "Do you want to copy it to your clipboard?",
+  "exportSecretKeyCopyConfirmTitle": "Exporting the secret key reveals sensitive information.",
+  "exportSecretKeyCopyCopied": "Secret key copied to clipboard",
+  "exportSecretKeyReveal": "Reveal secret key",
+  "exportSecretKeyShow": "Show secret key",
+  "exportWarning1": "The Samui team will never ask for your secrets.",
+  "exportWarning2": "Never share your secret or enter it into an app or website.",
+  "exportWarning3": "Anyone with your secret will have complete control of your account.",
+  "exportWarningAccept": "I accept that exporting this value is at my own risk.",
   "networkInputEndpointDescription": "Provide the network endpoint",
   "networkInputEndpointLabel": "Endpoint",
   "networkInputEndpointPlaceholder": "Network Endpoint",
