--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -1,20 +1,21 @@
 {
-  "accountBookmarksDescription": "List of accounts you bookmarked",
-  "accountBookmarksEmpty": "You have no account bookmarks yet.",
-  "accountBookmarksTitle": "Account bookmarks",
   "actionDelete": "Delete",
   "actionManage": "Manage",
   "actions": "Actions",
   "actionUpdate": "Update",
   "address": "Address",
+  "bookmarkAccountDescription": "List of accounts you bookmarked",
+  "bookmarkAccountEmpty": "You have no account bookmarks yet.",
+  "bookmarkAccountTitle": "Account bookmarks",
   "bookmarkDelete": "Delete bookmark",
   "bookmarkDeleteDescription": "This action cannot be undone.",
   "bookmarkDeleteTitle": "Are you sure you want to delete this bookmark?",
+  "bookmarkTransactionDescription": "List of transactions you bookmarked",
+  "bookmarkTransactionEmpty": "You have no transaction bookmarks yet.",
+  "bookmarkTransactionTitle": "Transaction bookmarks",
   "editLabel": "Edit label",
   "label": "Label",
   "labelEmpty": "None",
   "labelInputPlaceholder": "Enter a label",
-  "transactionBookmarksDescription": "List of transactions you bookmarked",
-  "transactionBookmarksEmpty": "You have no transaction bookmarks yet.",
-  "transactionBookmarksTitle": "Transaction bookmarks"
+  "signature": "Signature"
 }
