--- a/packages/i18n/locales/es/explorer.json
+++ b/packages/i18n/locales/es/explorer.json
@@ -1,20 +1,21 @@
 {
-  "accountBookmarksDescription": null,
-  "accountBookmarksEmpty": null,
-  "accountBookmarksTitle": null,
   "actionDelete": null,
   "actionManage": null,
   "actions": null,
   "actionUpdate": null,
   "address": null,
+  "bookmarkAccountDescription": null,
+  "bookmarkAccountEmpty": null,
+  "bookmarkAccountTitle": null,
   "bookmarkDelete": null,
   "bookmarkDeleteDescription": null,
   "bookmarkDeleteTitle": null,
+  "bookmarkTransactionDescription": null,
+  "bookmarkTransactionEmpty": null,
+  "bookmarkTransactionTitle": null,
   "editLabel": null,
   "label": null,
   "labelEmpty": null,
   "labelInputPlaceholder": null,
-  "transactionBookmarksDescription": null,
-  "transactionBookmarksEmpty": null,
-  "transactionBookmarksTitle": null
+  "signature": null
 }
