feat(site): add homepage title tag

--- a/apps/site/src/content/docs/index.mdx
+++ b/apps/site/src/content/docs/index.mdx
@@ -1,5 +1,8 @@
 ---
 title: Home
+head:
+  - tag: title
+    content: Samui Wallet | Open Source Solana Wallet and Toolbox
 description: Open Source Solana wallet and toolbox for builders.
 template: splash # Remove or comment out this line to display the site sidebar on this page.
 banner:
