--- a/packages/i18n/locales/es/portfolio.json
+++ b/packages/i18n/locales/es/portfolio.json
@@ -1,23 +1,20 @@
 {
+  "actionClose": "Cerrar",
+  "actionConfirm": "Confirmar",
   "actionCopyPublicKey": "Copiar clave pública",
   "actionCopyPublicKeyError": "No se pudo copiar la clave pública.",
   "actionCopyPublicKeySuccess": "Clave pública copiada",
   "actionReceive": "Recibir",
   "actionRequestAirdrop": "Solicitar airdrop",
+  "actionSelectToken": "Selecciona token",
   "actionSend": "Enviar",
   "actionUseFaucet": "Usa faucet",
   "labelActivity": "Actividad",
   "labelTokens": "Tokens",
   "noTransactions": "No se encontraron transacciones.",
-  "pageReceiveDescription": "Reciba activos enviándolos a esta clave pública",
-  "pageReceiveTitle": "Reciba activos",
-  "pageSendDescription": "Selecciona el token, introduce la clave pública de destino y la cantidad.",
-  "pageSendTitle": "Enviar activos",
   "pageTitleActivity": "Actividad",
   "requestAirdropDescription": "Solicita tu airdrop para empezar.",
   "requestAirdropTitle": "Solicitar airdrop",
-  "searchInputNone": "Token no encontrado",
-  "searchInputPlaceholder": "Buscar token...",
   "searchInputSelect": "Selecciona token",
   "sendInputAmountLabel": "Cantidad",
   "sendInputAmountPlaceholder": "Cantidad",
