fix(i18n): special character in text

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -61,7 +61,7 @@
   "pageWalletName": "Wallets",
   "themeDark": "Dark",
   "themeLight": "Light",
-  "walletAddAccountDeriveDescription": "Derive an account from the Wallet&#39;s mnemonic",
+  "walletAddAccountDeriveDescription": "Derive an account from the Wallet's mnemonic",
   "walletAddAccountDeriveTitle": "Derive an account",
   "walletAddAccountImportDescription": "Import an account from a base58 secret key or byte array",
   "walletAddAccountImportLabel": "Enter secret key (base58 or byte array)",
