fix(ui): add aria-labels to icon-only buttons for screen readers (#473)

--- a/packages/i18n/locales/en/portfolio.json
+++ b/packages/i18n/locales/en/portfolio.json
@@ -9,6 +9,7 @@
   "actionSelectToken": "Select Token",
   "actionSend": "Send",
   "actionUseFaucet": "Use faucet",
+  "buttonRefresh": "Refresh activity",
   "labelActivity": "Activity",
   "labelTokens": "Tokens",
   "noTransactions": "No transactions found.",
