--- a/packages/i18n/locales/es/portfolio.json
+++ b/packages/i18n/locales/es/portfolio.json
@@ -9,6 +9,7 @@
   "actionSelectToken": "Selecciona token",
   "actionSend": "Enviar",
   "actionUseFaucet": "Usa faucet",
+  "buttonRefresh": "Actualizar actividad",
   "labelActivity": "Actividad",
   "labelTokens": "Tokens",
   "noTransactions": "No se encontraron transacciones.",
