feat: add description to wallets

--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -81,6 +81,9 @@
   "walletCreateImportTitle": "Importar una billetera existente",
   "walletInputDerivationPathDescription": "Proporcione la ruta de derivación de la billetera.",
   "walletInputDerivationPathLabel": "Ruta de derivación",
+  "walletInputDescriptionDescription": "Una descripción opcional para ayudar a identificar la billetera.",
+  "walletInputDescriptionLabel": "Descripción",
+  "walletInputDescriptionPlaceholder": "Descripción opcional de la billetera",
   "walletInputMnemonicDescription": "Proporcione el mnemónica de la billetera.",
   "walletInputMnemonicLabel": "Mnemónica",
   "walletInputMnemonicPlaceholder": "Mnemónica de la billetera",
