feat: disabled selection on input when blurred

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -21,12 +21,14 @@
   "exportMnemonicCopyConfirmDescription": "Do you want to copy it to your clipboard?",
   "exportMnemonicCopyConfirmTitle": "Exporting the mnemonic reveals sensitive information.",
   "exportMnemonicCopyCopied": "Mnemonic copied to clipboard",
+  "exportMnemonicHide": "Hide mnemonic",
   "exportMnemonicReveal": "Reveal mnemonic",
   "exportMnemonicShow": "Show mnemonic",
   "exportSecretKeyCopy": "Copy secret key",
   "exportSecretKeyCopyConfirmDescription": "Do you want to copy it to your clipboard?",
   "exportSecretKeyCopyConfirmTitle": "Exporting the secret key reveals sensitive information.",
   "exportSecretKeyCopyCopied": "Secret key copied to clipboard",
+  "exportSecretKeyHide": "Hide secret key",
   "exportSecretKeyReveal": "Reveal secret key",
   "exportSecretKeyShow": "Show secret key",
   "exportWarning1": "The Samui team will never ask for your secrets.",
