--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -21,12 +21,14 @@
   "exportMnemonicCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
   "exportMnemonicCopyConfirmTitle": "Al exportar la mnemónica se revela información confidencial.",
   "exportMnemonicCopyCopied": "Mnemónica copiada al portapapeles",
+  "exportMnemonicHide": "Ocultar mnemónica",
   "exportMnemonicReveal": "Revelar mnemónica",
   "exportMnemonicShow": "Mostrar mnemónica",
   "exportSecretKeyCopy": "Copiar clave secreta",
   "exportSecretKeyCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
   "exportSecretKeyCopyConfirmTitle": "Al exportar la clave secreta se revela información confidencial.",
   "exportSecretKeyCopyCopied": "Clave secreta copiada al portapapeles",
+  "exportSecretKeyHide": "Ocultar clave secreta",
   "exportSecretKeyReveal": "Revelar clave secreta",
   "exportSecretKeyShow": "Mostrar clave secreta",
   "exportWarning1": "El equipo de Samui nunca solicitará tus secretos.",
