feat(explorer): translate explorer pages

--- a/packages/i18n/locales/es/explorer.json
+++ b/packages/i18n/locales/es/explorer.json
@@ -1,21 +1,35 @@
 {
-  "actionDelete": null,
-  "actionManage": null,
-  "actions": null,
-  "actionUpdate": null,
-  "address": null,
-  "bookmarkAccountDescription": null,
-  "bookmarkAccountEmpty": null,
-  "bookmarkAccountTitle": null,
-  "bookmarkDelete": null,
-  "bookmarkDeleteDescription": null,
-  "bookmarkDeleteTitle": null,
-  "bookmarkTransactionDescription": null,
-  "bookmarkTransactionEmpty": null,
-  "bookmarkTransactionTitle": null,
-  "editLabel": null,
-  "label": null,
-  "labelEmpty": null,
-  "labelInputPlaceholder": null,
-  "signature": null
+  "accountOverviewTitle": "Descripción general de la cuenta",
+  "actionDelete": "Eliminar",
+  "actionManage": "Gestionar",
+  "actionRefresh": "Actualizar",
+  "actionSearch": "Buscar",
+  "actions": "Acciones",
+  "actionUpdate": "Actualizar",
+  "address": "Dirección",
+  "bookmarkAccountDescription": "Lista de cuentas etiquetadas",
+  "bookmarkAccountEmpty": "Aún no tienes cuentas etiquetadas",
+  "bookmarkAccountTitle": "Cuentas etiquetadas",
+  "bookmarkAdd": "Agregar etiqueta",
+  "bookmarkAdded": "Etiqueta agregada",
+  "bookmarkDelete": "Eliminar etiqueta",
+  "bookmarkDeleteDescription": "Esta acción no se puede deshacer",
+  "bookmarkDeleteTitle": "¿Estás seguro que quieres eliminar esta etiqueta?",
+  "bookmarkRemove": "Remover etiqueta",
+  "bookmarkRemoved": "Etiqueta removida",
+  "bookmarkTransactionDescription": "Lista de transacciones etiquetadas",
+  "bookmarkTransactionEmpty": "Aún no tienes transacciones etiquetadas",
+  "bookmarkTransactionTitle": "Transacciones etiquetadas",
+  "editLabel": "Editar nombre",
+  "inputSearchPlaceholder": "Buscar cuenta o transacción",
+  "label": "Etiqueta",
+  "labelEmpty": "Ninguna",
+  "labelInputPlaceholder": "Ingresa una etiqueta",
+  "lamports": "Lamports",
+  "owner": "Propietario",
+  "pageExplorerDescription": "Buscar y explorar cuentas o transacciones",
+  "pageExplorerTitle": "Explorador",
+  "signature": "Firma",
+  "transactionsOverviewDescription": "Transacciones recientes de esta cuenta",
+  "transactionsOverviewTitle": "Transacciones de la cuenta"
 }
