--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -1,21 +1,35 @@
 {
+  "accountOverviewTitle": "Account overview",
   "actionDelete": "Delete",
   "actionManage": "Manage",
+  "actionRefresh": "Refresh",
+  "actionSearch": "Search",
   "actions": "Actions",
   "actionUpdate": "Update",
   "address": "Address",
   "bookmarkAccountDescription": "List of accounts you bookmarked",
   "bookmarkAccountEmpty": "You have no account bookmarks yet.",
   "bookmarkAccountTitle": "Account bookmarks",
+  "bookmarkAdd": "Add bookmark",
+  "bookmarkAdded": "Bookmark added",
   "bookmarkDelete": "Delete bookmark",
   "bookmarkDeleteDescription": "This action cannot be undone.",
   "bookmarkDeleteTitle": "Are you sure you want to delete this bookmark?",
+  "bookmarkRemove": "Remove bookmark",
+  "bookmarkRemoved": "Bookmark removed",
   "bookmarkTransactionDescription": "List of transactions you bookmarked",
   "bookmarkTransactionEmpty": "You have no transaction bookmarks yet.",
   "bookmarkTransactionTitle": "Transaction bookmarks",
   "editLabel": "Edit label",
+  "inputSearchPlaceholder": "Search account or transaction",
   "label": "Label",
   "labelEmpty": "None",
   "labelInputPlaceholder": "Enter a label",
-  "signature": "Signature"
+  "lamports": "lamports",
+  "owner": "owner",
+  "pageExplorerDescription": "Search and explore accounts or transactions",
+  "pageExplorerTitle": "Explorer",
+  "signature": "Signature",
+  "transactionsOverviewDescription": "Recent transactions for this account",
+  "transactionsOverviewTitle": "Account transactions"
 }
