--- a/packages/i18n/locales/en/ui.json
+++ b/packages/i18n/locales/en/ui.json
@@ -1,6 +1,6 @@
 {
-  "buttonBack": "Go back ",
-  "buttonClose": "Close warning",
+  "buttonBack": "Go back to previous page",
+  "buttonClose": "Close experiment warning message",
   "buttonCopy": "Copy to clipboard",
   "errorTitle": "Oops, an error occurred",
   "experimentalWarningDescription": "Use this wallet at your own risk. Do not use any real funds.",
