feat(portfolio): disable send button for watch-only accounts

--- a/packages/i18n/locales/en/portfolio.json
+++ b/packages/i18n/locales/en/portfolio.json
@@ -16,6 +16,7 @@
   "requestAirdropDescription": "Request your airdrop to get started.",
   "requestAirdropTitle": "Request Airdrop",
   "searchInputSelect": "Select token...",
+  "sendDisabledWatchOnly": "Cannot send from a watch-only account",
   "sendInputAmountLabel": "Amount",
   "sendInputAmountPlaceholder": "Amount",
   "sendInputDestinationLabel": "Destination",
