feat(portfolio): split the destination and amount screen in send flow

--- a/packages/i18n/locales/en/portfolio.json
+++ b/packages/i18n/locales/en/portfolio.json
@@ -6,7 +6,9 @@
   "actionCopyPublicKeySuccess": "Copied public key",
   "actionReceive": "Receive",
   "actionRequestAirdrop": "Request Airdrop",
-  "actionSelectToken": "Select Token",
+  "actionSelectAmount": "Select amount",
+  "actionSelectDestination": "Select destination",
+  "actionSelectToken": "Select token",
   "actionSend": "Send",
   "actionUseFaucet": "Use faucet",
   "labelActivity": "Activity",
