feat(dev): add dev playground for multiple address input

--- a/packages/i18n/locales/es/ui.json
+++ b/packages/i18n/locales/es/ui.json
@@ -1,4 +1,7 @@
 {
+  "actionAdd": "Agregar",
+  "actionRemove": "Eliminar",
+  "actionSave": "Guardar",
   "errorTitle": "Uy, ocurrió un error",
   "experimentalWarningDescription": "Utilice esta billetera bajo su propio riesgo. No use fondos reales.",
   "experimentalWarningTitle": "Este es un software experimental.",
