--- a/packages/i18n/locales/en/ui.json
+++ b/packages/i18n/locales/en/ui.json
@@ -1,4 +1,7 @@
 {
+  "actionAdd": "Add",
+  "actionRemove": "Remove",
+  "actionSave": "Save",
   "errorTitle": "Oops, an error occurred",
   "experimentalWarningDescription": "Use this wallet at your own risk. Do not use any real funds.",
   "experimentalWarningTitle": "This is experimental software.",
