feat: add the option to select wallet color

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -81,6 +81,8 @@
   "walletCreateHeaderSeed": "Seed phrases",
   "walletCreateImportDescription": "Import an existing seed phrase and discover accounts",
   "walletCreateImportTitle": "Import an existing wallet",
+  "walletInputColorDescription": "Select the color for this wallet",
+  "walletInputColorLabel": "Color",
   "walletInputDerivationPathDescription": "Provide the derivation path of the wallet",
   "walletInputDerivationPathLabel": "Derivation patch",
   "walletInputDescriptionDescription": "An optional description to help identify the wallet.",
