feat(portfolio): add menu to token balance items

--- a/packages/i18n/locales/en/portfolio.json
+++ b/packages/i18n/locales/en/portfolio.json
@@ -21,5 +21,7 @@
   "sendInputAmountLabel": "Amount",
   "sendInputAmountPlaceholder": "Amount",
   "sendInputDestinationLabel": "Destination",
-  "sendInputDestinationPlaceholder": "Destination"
+  "sendInputDestinationPlaceholder": "Destination",
+  "viewExplorerAccount": "View account in Explorer",
+  "viewExplorerToken": "View token in Explorer"
 }
