--- a/packages/i18n/locales/es/portfolio.json
+++ b/packages/i18n/locales/es/portfolio.json
@@ -21,5 +21,7 @@
   "sendInputAmountLabel": "Cantidad",
   "sendInputAmountPlaceholder": "Cantidad",
   "sendInputDestinationLabel": "Destino",
-  "sendInputDestinationPlaceholder": "Destino"
+  "sendInputDestinationPlaceholder": "Destino",
+  "viewExplorerAccount": null,
+  "viewExplorerToken": null
 }
