feat(settings): move API settings to separate card

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -49,9 +49,9 @@
   "networkPageAddTitle": "Add Network",
   "networkPageEditTitle": "Edit network",
   "pageGeneralApiEndpoint": "API Endpoint",
+  "pageGeneralApiSettings": "API settings",
   "pageGeneralDangerZone": "Danger zone",
   "pageGeneralDescription": "General settings for the app",
-  "pageGeneralDeveloperMode": "Enable developer mode",
   "pageGeneralExperimentalSoftware": "Show warning about experimental software",
   "pageGeneralLanguage": "Language",
   "pageGeneralName": "General",
