--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -49,9 +49,9 @@
   "networkPageAddTitle": "Agregar red",
   "networkPageEditTitle": "Editar red",
   "pageGeneralApiEndpoint": "Endpoint de la API",
+  "pageGeneralApiSettings": "Ajustes de la API",
   "pageGeneralDangerZone": "Zona de peligro",
   "pageGeneralDescription": "Ajustes generales de la app",
-  "pageGeneralDeveloperMode": "Habilitar modo de desarrollador",
   "pageGeneralExperimentalSoftware": "Mostrar advertencia sobre software experimental",
   "pageGeneralLanguage": "Idioma",
   "pageGeneralName": "General",
